# mul-image-edit-rs

./: .gitignore  Cargo.toml
doc/: project.bib  project.tex
src/: _app.rs  app.rs  constants.rs  main.rs
src/app/: app.rs
src/components/: app.rs  image.rs  image_editor.rs  mod.rs  modifier_pipeline.rs
src/components/debug/: bottom_panel.rs  frame_history.rs  mod.rs
src/components/modifiers/: blur.rs  contrast.rs  exposure.rs  mod.rs  modifier.rs  sepia.rs  slider.rs
src/components/modifiers/specific/: b_mul.rs  b_mul_luma.rs  blur.rs  contrast.rs  custom.rs  exposure.rs  gamma.rs  mod.rs  sepia.rs  tint.rs
src/data/: analyzer.rs  app_state.rs  constants.rs  edited_image.rs  editor_state.rs  mod.rs  multimedia_file.rs  timing.rs  track.rs  viewport.rs
src/ui/: app_ui.rs  debug_bottom_panel.rs  editor_ui.rs  handle_dropped_files.rs  mod.rs  track_panel.rs  track_segment_editor.rs  utils.rs
src/utils/: fit_into.rs  format_size.rs  io_files.rs  load_input_file.rs  load_input_files.rs  math.rs  mod.rs  with_data.rs
src/widgets/: buttons.rs  centered_window.rs  editor_slider.rs  file_dropper.rs  mod.rs  texts.rs
