[package]
name = "image-editor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
egui = "0.17.0"
epi = "0.17.0"
egui_glow = "0.17.0"
egui-winit = "0.17.0"
egui_extras = { version = "0.17.0", features = ["image", "svg"] }

glow = "0.11.2"
glutin = "0.28.0"

file-format = "0.6.0"
rfd = "0.7.0"
indoc = "1.0"
image = { version = "0.24.1", features = ["jpeg", "png"] }
cgmath = "0.18.0"
